// Vitest Snapshot v1

exports[`envoie un email sur un octroi d'AEX 1`] = `
{
  "content": "
  <h3>L’étape « demande » d’une demande d’AEX vient d’être réalisée.</h3>
  
  <hr>
  
  <b>Lien</b> : <a href=\\"undefined/titres/titreId\\">undefined/titres/titreId</a> <br>
  <b>Effectué par</b> : undefined Camino (camino@beta.gouv.fr)<br>
  
  ",
  "emails": [
    "mc.remd.deal-guyane@developpement-durable.gouv.fr",
  ],
  "subject": "demande | Nouvelle demande déposée",
}
`;

exports[`envoie un email sur un octroi d'ARM 1`] = `
{
  "content": "
  <h3>L’étape « dépôt de la demande » d’une demande d’ARM vient d’être réalisée.</h3>
  
  <hr>
  
  <b>Lien</b> : <a href=\\"undefined/titres/titreId\\">undefined/titres/titreId</a> <br>
  <b>Effectué par</b> : undefined Camino (camino@beta.gouv.fr)<br>
  
  ",
  "emails": [
    "ptmg@ctguyane.fr",
    "pole.minier@onf.fr",
  ],
  "subject": "dépôt de la demande | Nouvelle demande déposée",
}
`;
